added levels support and gameover screen

--- a/game.properties
+++ b/game.properties
@@ -33,9 +33,9 @@ rabbit.3.runImg=ezgif.com-crop.gif
 rabbit.3.jumpImg=ezgif.com-crop.gif
 
 
-levels.count=1
+levels.count=2
 
-level.1.maxScore=5
+level.1.maxScore=2
 level.1.background=background.jpg
 level.1.wallsCount=1
 
@@ -44,3 +44,21 @@ level.1.wall.1.y=450
 level.1.wall.1.width=1500
 level.1.wall.1.height=20
 level.1.wall.1.texture=11905589-the-modern-wall-with-water-fall-for-background-and-texture.jpg
+
+
+
+level.2.maxScore=5
+level.2.background=background.jpg
+level.2.wallsCount=2
+
+level.2.wall.1.x=0
+level.2.wall.1.y=450
+level.2.wall.1.width=1500
+level.2.wall.1.height=80
+level.2.wall.1.texture=11905589-the-modern-wall-with-water-fall-for-background-and-texture.jpg
+
+level.2.wall.2.x=300
+level.2.wall.2.y=250
+level.2.wall.2.width=200
+level.2.wall.2.height=20
+level.2.wall.2.texture=11905589-the-modern-wall-with-water-fall-for-background-and-texture.jpg
